--- a/package.json
+++ b/package.json
@@ -11,10 +11,6 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "mysql2": "^3.3.3",
-    "sequelize": "^6.32.0",
-    "sequelize-cli": "^6.6.0"
+    "express": "^4.18.2"
   }
 }
