--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "mysql2": "^3.3.3",
     "sequelize": "^6.32.0",
     "sequelize-cli": "^6.6.0"
   }
